src/test/ui/parser/do-not-suggest-semicolon-before-array.stderr
error: expected one of `.`, `?`, `]`, or an operator, found `,`
  --> $DIR/do-not-suggest-semicolon-before-array.rs:5:7
   |
LL |     [1, 3)
   |       ^ expected one of `.`, `?`, `]`, or an operator

error: aborting due to previous error

